Initialize the github by pushing all files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(plot,traceline)
 S3method(print,est_irt)
 S3method(print,est_item)
 S3method(print,irtfit)
+S3method(print,rdif)
 S3method(print,summary.est_irt)
 S3method(print,summary.est_item)
 S3method(summary,est_irt)
@@ -52,7 +53,6 @@ export(lwrc)
 export(plm)
 export(post_den)
 export(rdif)
-export(rdif2)
 export(run_flexmirt)
 export(shape_df)
 export(simdat)
