--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ Description: Fit unidimensional item response theory (IRT) models to a mixture
     For the item parameter estimation, marginal maximum likelihood estimation 
     with expectation-maximization (MMLE-EM) algorithm 
     (Bock & Aitkin (1981) <doi:10.1007/BF02294168>) is used. 
-    For the online calibration, the fixed item parameter calibration (FIPC) method 
+    For the online calibration, the fixed item parameter calibration method 
     (Kim (2006) <doi:10.1111/j.1745-3984.2006.00021.x>) and 
-    the fixed ability parameter calibration (FAPC) method
+    the fixed ability parameter calibration method
     (Ban, Hanson, Wang, Yi, & Harris (2011) <doi:10.1111/j.1745-3984.2001.tb01123.x>) 
     are provided. For the ability estimation, several popular scoring methods 
     (e.g., MLE, EAP, and MAP) are implemented. In terms of assessing the IRT 
