--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Title: Unidimensional Item Response Theory Modeling
 Version: 1.6.3
 Description: Fit unidimensional item response theory (IRT) models to a mixture 
     of dichotomous and polytomous data, calibrate online item parameters 
-    (i.e., pretest and operational items), estimate examinees abilities, 
+    (i.e., pretest and operational items), estimate examinees' abilities, 
     and examine the IRT model-data fit on item-level in different ways 
     as well as provide useful functions related to unidimensional IRT models. 
     For the item parameter estimation, marginal maximum likelihood estimation 
-    with expectation-maximization (MMLE-EM) algorithm 
+    via expectation-maximization (MMLE-EM) algorithm 
     (Bock & Aitkin (1981) <doi:10.1007/BF02294168>) is used. 
     For the online calibration, the fixed item parameter calibration method 
     (Kim (2006) <doi:10.1111/j.1745-3984.2006.00021.x>) and 
