--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(est_score,default)
 S3method(est_score,est_irt)
 S3method(getirt,est_irt)
 S3method(getirt,est_item)
+S3method(getirt,est_mg)
 S3method(irtfit,default)
 S3method(irtfit,est_irt)
 S3method(irtfit,est_item)
@@ -16,12 +17,15 @@ S3method(plot,test.info)
 S3method(plot,traceline)
 S3method(print,est_irt)
 S3method(print,est_item)
+S3method(print,est_mg)
 S3method(print,irtfit)
 S3method(print,rdif)
 S3method(print,summary.est_irt)
 S3method(print,summary.est_item)
+S3method(print,summary.est_mg)
 S3method(summary,est_irt)
 S3method(summary,est_item)
+S3method(summary,est_mg)
 S3method(sx2_fit,default)
 S3method(sx2_fit,est_irt)
 S3method(sx2_fit,est_item)
@@ -42,6 +46,7 @@ export(covirt)
 export(drm)
 export(est_irt)
 export(est_item)
+export(est_mg)
 export(est_score)
 export(gen.weight)
 export(getirt)
