--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(logLik,est_item)
 S3method(plot,irtfit)
 S3method(plot,test.info)
 S3method(plot,traceline)
+S3method(print,catsib)
 S3method(print,est_irt)
 S3method(print,est_item)
 S3method(print,est_mg)
@@ -23,6 +24,9 @@ S3method(print,rdif)
 S3method(print,summary.est_irt)
 S3method(print,summary.est_item)
 S3method(print,summary.est_mg)
+S3method(rdif,default)
+S3method(rdif,est_irt)
+S3method(rdif,est_item)
 S3method(summary,est_irt)
 S3method(summary,est_item)
 S3method(summary,est_mg)
@@ -42,6 +46,7 @@ export(bring.bilog)
 export(bring.flexmirt)
 export(bring.mirt)
 export(bring.parscale)
+export(catsib)
 export(covirt)
 export(drm)
 export(est_irt)
