--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,6 +51,7 @@ Imports:
     gridExtra,
     parallel,
     Matrix,
+    janitor,
 Authors@R: c(person("Hwanggyu", "Lim", email="hglim83@gmail.com", role=c("aut", "cre")),
     person("Craig S.", "Wells", email="cswells@educ.umass.edu ", role="ctb")
     ) 
