--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(traceline)
 export(write.flexmirt)
 import(dplyr)
 import(ggplot2)
+import(janitor)
 import(purrr)
 import(utils)
 importFrom(Matrix,bdiag)
